# notes

./:  *temp*.txt  !Users!johnw!Contracts!BAE!Projects!linearscan!Lib.txt  *Article INBOX*.txt  *Article list.emacs.devel*  *Article list.misc*  *Customize Option: Font Latex User Keyword Classes*.txt  *Flycheck error messages*.txt  *Org Agenda*  *Summary INBOX*.txt  *compilation*.txt  *eshell*  *goals*.txt  *gud-clang-tags*.txt  *haskell*  *magit: fay*.txt  *magit: fpco*.txt  *magit: nixpkgs*.patch  *magit: nixpkgs*.txt  *response*.txt  *scratch*  *scratch*.el  *scratch*.txt  .emacs.el  .envrc  .gitconfig  .gitignore  .gitmodules  10-haskell.nix  2.txt  20-bugzilla.nix  2014-06-06-simpler-conduit-library.md  2014-06-06-simpler-conduit-library.txt  2014-07-28-applying-denotational-design.md  30-apps.nix  4.txt  6.txt  AList.v  ATIF_fidl.v  AbstractionRelations.v  Adj.hs  (+461 more)
1062942/: ruby-enterprise.spec
107414/: init.pp
107918/: *scratch*
1228615/: shemacs  untabify.el
1977869/: gistfile1.txt
209780/: org2tc
217901/: bug.cc
221723/: TODO-3.0
229723/: foo.py
232728/: py_journal.cc
239086/: out2
239109/: demo.py
242525/: init.lisp
253848/: *scratch*
254842/: *scratch*
288232/: .emacs.el
2941089/: *scratch*.txt
2944095/: *grep*.txt
2944196/: emacs.el
2944406/: #emacs.txt
2946352/:  *temp*.txt
2946358/:  *temp*.txt
2957767/: del.sh
2963333/: eshell-async.el
2986851/: llvm.cpp
3043491/:  *temp*.txt
3086394/: *scratch*.el
3096046/: *scratch*.el
3172574/: funcall.ll
3208991/: union.c  union.ll
327433/: esh-toggle.el
3288565/: init.el
3308477/: my-hoogle.el
3317656/:  *temp*.txt
3342568/: monad.hs
3376163/:  *temp*.txt
3381608/: stmk_return.c  stmk_return.ll
3420036/:  *temp*.txt
3455161/: gistfile1.txt
3475035/:  *temp*.txt
3495044/:  *temp*.txt
3495435/: 1.txt
3712858/:  *temp*.txt
3724780/:  *temp*.txt
3789552/:  *temp*.txt
3798190/:  *temp*.txt
3798216/:  *temp*.txt
380760/: gist.el
390493/: *magit-commit*
3928100/: *scratch*.txt
4046742/: Euler015.hs
4061186/: output.html
410726/: del
4178047/: *scratch*.txt
431037/: *scratch*
4323188/: *scratch*.txt
4333700/: *compilation*.txt
4333725/: *compilation*.txt
4344130/: Main.hs
4368098/: *scratch*.txt
4473989/:  *temp*.txt
4510351/: *scratch*.txt
4570066/: emacs-rebuild.sh
4657834/: abspath.py
472113/: .emacs.el
472120/: .emacs.el
474447/: maybe.cc
474461/: maybe.cc
474530/: scratch.hs
4951256/:  *temp*.txt
4956458/: *Article INBOX*.txt
5000/: gistfile2.cpp
50229/: gistfile2.h
5053961/:  *temp*.txt
50694/: gistfile1.hpp
5107210/:  *temp*.txt
5107597/:  *temp*.txt
5169945/:  *temp*.txt
5264466/: build-plan.txt
5390541/: tzones.sh
5390580/: emacs-rebuild.sh
5404158/: GhcHsWalk.hs
5406277/: bad.txt
5471843/: S3.hs
55395/: amount.cc
5552098/: isolation-runner.el
5572758/:  *temp*.txt
5598014/:  *temp*.txt
5604108/: hpc-report.sh
5711810/: *scratch*.txt
5724139/: Project.hs
5726680/: build-and-test.sh
57931/: .gitk
5798/: gistfile1.txt
5799/: gistfile1.sh
5816797/: forkbuild.sh
5872627/: IsolationRunnerSpec.hs
5880939/: init.el
5882914/: *scratch*.txt
5887413/: LLVMCTypes.hs
5907362/: *scratch*.el
5926087/:  *temp*.txt
5942842/: test2.hs
5946295/: mutable-lens.hs
5987656/: cont.hs
5987793/: Project.hs
5992303/: foo.hs
5992412/: foo.hs
5992485/: delcont.hs
6006160/: *scratch*.txt
6007141/: config.txt
60155/: foo.s
60185/: .emacs.el
6043018/: build-and-test.sh
6056026/: *scratch*.txt
60590/: sample.py
60600/: *scratch*
6060770/: CyberSource.hs
6087061/: *scratch*.txt
6093643/: *scratch*.txt
6102509/: CybsSoapClient.cpp
6126999/: except.hs
6134589/: concur.hs
6184784/: haskell-config.el
61928/: .emacs.el
6214522/: foo.hs
6226597/: *compilation*.txt
6228578/: logger.hs
62408/: *scratch*
63050/: pre-commit
6327073/: sequence'.hs
6333233/: Types.hs
6519120/: *scratch*.txt
6530102/: Job.hs
6616919/: Conduit.hs
6671808/: Pipes.hs
6694926/: *scratch*.txt
6822117/: lemma-+comm.agda
68720/: primary
6891171/: nat.agda
6905323/: Concurrent.hs
6956779/:  *temp*.txt
7002327/: profunctor.hs
70071/: *eshell*
7097759/: IsolationRunnerSpec.hs
70993/: acprep
71019/: generate.cc
7130757/: *scratch*.txt
71692/: todo.txt-1
7280871/: *magit: hoogle*.txt
73117/: todo.txt
7316489/: Simplified.hs
7483324/:  *temp*.txt
7543101/: Netstring.hs
7543502/: Netstring.hs
7637312/: *scratch*.txt
77341/: monad.hs
7746286/: Parse.hs
79274/: schroedinger2.hs
80745/: ld-wrapper.hs
815288/: configure.ac
83430/: *scratch*
90340/: archive.lhs
91549/: archive.hs
95475/: db2.spec
99622/: Waitress.java
SpeedTest/: SpeedTest.slow  SpeedTestC.c
acl2/: default.nix
agda/: Ledger.agda  Maturity.agda  NoYo.agda  Notes.agda  Swiftlet.agda  Trees.agda  Zipper.agda  Zipper.hs  default.nix  notes.agda-lib  pipes.agda  tfix.agda
c++/: LinearScan.cpp  monad.cc
coq/: Blockchain.v  Canonical.v  Caps.v  Conor.v  ConstructedList.v  CoqMisc.v  CoqMonoid.v  DFeuer.v  DeMorgan.v  DefPact.v  Denotational.v  Dynasty.v  ELisp.v  EffectOld.v  EmacsLisp.v  Eq.v  EquationalReasoning.v  Errors.v  Extensible.v  Fiber.v  FibonacciBounded.v  Idris.v  Inhabited.v  Joachim.v  LTL-old.v  LTL.v  Lambda.v  Lattice.v  Listified.v  Malecha.v  MapDecide.v  Maurice.v  Maybe.v  Monoids.v  Nik05.v  NotNotNot.v  NumDecide.v  OldRefinement.v  Oneofvalts.v  Pipes.v  (+20 more)
ct/: alg.agda  ct.agda  int.agda  nat.agda  order.agda  st.agda
emacs/: date.el  scan.el
fidl/: Composition.v  Composition2.v  DSL.v  DSLI.v  Makefile  Maybex.v  Monadx.v  Refinements.v  Sets.v  Specification.v  Specification2.v  Tactics.v  Tainted.v  Vectors.v  _CoqProject
gists/: gist-backup  gist-backup.py  gist-delete-all.py
gists/6116959/: cybersource.cabal
gists/8432316/: isolation-runner.cabal
gists/f719a3d41696d48f6005/gists/815288/: Makefile.am
gists/f719a3d41696d48f6005/gists/c38e514d346a0093bd97/: taskpool.cabal
(+1342 files in other folders)
