test-suite test
    hs-source-dirs: . test
    default-language: Haskell2010
    main-is: main.hs
    type: exitcode-stdio-1.0
    ghc-options: -threaded -with-rtsopts "-N2"
    other-modules:
        Data.TaskPool.Internal
    build-depends:
        base
      , async
      , stm
      , transformers
      , fgl
      , containers
      , hspec                >= 1.4
